# promptql-python-sdk

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  setup.py
.github/workflows/: python-tests.yml
examples/: advanced_conversation.py  simple_query.py  simple_query_v2.py  v1_vs_v2_comparison.py
promptql_api_sdk/: __init__.py  client.py
promptql_api_sdk/types/: __init__.py  models.py
scripts/: publish.sh  test_sdk_v1.py  test_sdk_v2.py
tests/: test_client.py  test_models.py  test_v2_models.py
