[project]
name = "promptql-api-sdk"
version = "0.1.0"
description = "Python SDK for PromptQL Natural Language API"
authors = [
    {name = "Hasura SDK Team"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "typing-extensions (>=4.13.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

